@@ -1,5 +1,7 @@
 * Added support for netCDF CDF-5 (NC_64BIT_DATA).
 
+* Fixed issue reading variable length strings from a scalar dataset in HDF5.
+
 2.18.3 2017-09-22
 ~~~~~~~~~~~~~~~~~
 
